[workspace]
members = [
    "packages/cartographer-core",
    "packages/cartographer-cli",
]

[package]
name = "cartographer-agent"
version = "2.13.1"
description = "Cartographer Agent - Network monitoring desktop application"
authors = ["Meridian Inc"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
# tauri-plugin-notification = "2.0"  # TODO: Re-enable when notifications are implemented
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
webbrowser = "0.8"
futures = "0.3"
semver = "1.0"
winreg = { version = "0.50", optional = true }

# MAC OUI vendor lookup (uses IEEE OUI database - all registries: MA-L, MA-M, MA-S, CID, IAB)
oui-data = "0.2"

# Secure credential storage using platform keychain
# Windows: Credential Manager, macOS: Keychain, Linux: Secret Service (GNOME Keyring/KWallet)
keyring = { version = "3", features = ["sync-secret-service"] }

# Configuration file parsing
toml = "0.8"

# Use cartographer-core as a dependency
cartographer-core = { path = "packages/cartographer-core" }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

